# niceprofit

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  nicehash_cpuminer_map.json
ci/: before_deploy.ps1  before_deploy.sh
src/: algorithm_picker.rs  benchmark.rs  clap.yml  configuration_provider.rs  main.rs  nicehash_api.rs  nicehash_api_raw.rs  nicehash_cpuminer_mapper.rs  parser.rs  performance_calculator.rs  profitability.rs  query_nicehash.rs  runner.rs
