[package]
name = "niceprofit"
version = "0.1.0"
authors = ["Stefano Chiodino <louderth@gmail.com>"]

[dependencies]
clap = {version = "2.26.2", features = ["yaml"]}
regex = "0.2"
lazy_static = "0.2.9"
reqwest = "0.8.0"
serde = "1.0.16"
serde_json = "1.0.4"
serde_derive = "1.0.16"
config = "0.6"
clippy = {version = "*", optional = true}

[features]
default = []
